wip: pagina de equipe

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -59,7 +59,7 @@
         </div>
       </div>
        {{else}}
-        <p>No team members available.</p>
+        <p>Sem equipes disponíveis...</p>
       {{/each}}
     </div>
     {{!-- <div>
