--- a/views/layouts/app.hbs
+++ b/views/layouts/app.hbs
@@ -41,8 +41,8 @@
       </div>
     </div>
     <div class="collapse" id="navbarToggleExternalContent">
-      <div class="bg-light p-4">
-        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+      <div class="bg-default p-4">
+      <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-default sidebar collapse">
       <div class="position-sticky pt-3">
         <ul class="nav flex-column">
           <li class="nav-item">
