--- a/views/layouts/equipe/index.hbs
+++ b/views/layouts/equipe/index.hbs
@@ -1,88 +1,125 @@
 {{#> app}}
 {{#if viewData.equipe}}
-  <section class="py-2 bg-default">
-  <div class="container text-dark">
-    <div class="row mb-0">
-      <div class="col-sm d-flex align-items-center">
-        <div class="row py-3">
-          <span class="mt-3">
-            <p class="my-0">
-              Equipe
+  <main class="pb-4">
+    <section class="py-2 bg-default">
+    <div class="container text-dark">
+      <div class="row mb-0">
+        <div class="col-sm d-flex align-items-center">
+          <div class="row py-3">
+            <span class="mt-3">
+              <p class="my-0">
+                Equipe
+              </p>
+              <h1 class="fw-bold">
+                {{ viewData.equipe.nome }}
+              </h1>
+            </span>
+            <p class="my-2">
+              {{ viewData.equipe.descricao }}
             </p>
-            <h1 class="fw-bold">
-              {{ viewData.equipe.nome }}
-            </h1>
-          </span>
-          <p class="my-2">
-            {{ viewData.equipe.descricao }}
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
- </section>
- <section>
-  <div class="container my-5">
-    <div class="d-flex flex-column gap-5">
-      <div>
-        <h2 class="text-dark">Desempenho no Ciclo</h2>
-        <p class="text-secondary">{{ viewData.equipe.ciclo }}</p>
-        <div class="d-flex align-items-center gap-3 my-3">
-          <a href="/vendas" class="btn btn-brand"><i class="bi bi-box-arrow-up-right mx-2"></i> Ver meu desempenho </a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <div class="card" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+            <div class="row align-items-center justify-content-between">
+              <div class="col d-flex align-items-center gap-3">
+                  <button type="button" class="btn btn-brand rounded-circle">
+                    <i class="bi bi-geo-alt"></i>
+                  </button>
+                  <span>
+                    {{ viewData.equipe.localizacao}}
+                  </span>
+                </div>
+                <div class="col d-flex align-items-center gap-3 ink-dark text-decoration-none rounded-circle mt-2">
+                  <img src="/img/avatar2.jpg" alt="mdo" width="42" height="40" class="rounded-circle">
+                  <span>{{ viewData.equipe.lider }}</span>
+                </div>
+                <div class="col d-flex align-items-center gap-3">
+                  <button type="button" class="btn btn-brand rounded-circle">
+                    <i class="bi bi-geo-alt"></i>
+                  </button>
+                  <span>
+                    <a class="text" href="{{ viewData.equipe.linkChat}}">Chat da Equipe</a>
+                  </span>
+                </div>
             </div>
           </div>
         </div>
       </div>
-      <div>
-        <div class="table-responsive">
-          <div>
-            <h2 class="text-dark">Consultores</h2>
-            <p class="text-secondary">Ordenados por total vendido</p>
+    </div>
+  </section>
+  <section>
+    <div class="container my-5">
+      <div class="d-flex flex-column gap-5">
+        <div>
+          <h2 class="text-dark">Desempenho no Ciclo</h2>
+          <p class="text-secondary">{{ viewData.equipe.ciclo }}</p>
+          <div class="d-flex align-items-center gap-3 my-3">
+            <a href="/vendas" class="btn btn-brand"><i class="bi bi-box-arrow-up-right mx-2"></i> Ver meu desempenho </a>
           </div>
-          <table class="table">
-              <thead class="table-light">
-                <tr>
-                  <th scope="col">Id</th>
-                  <th scope="col">Consultor</th>
-                  <th scope="col">Nivel</th>
-                  <th scope="col">Total Vendido</th>
-                  <th scope="col">Total Investido</th>
-                  <th scope="col">Total Lucro</th>
-                  <th scope="col">Qtd. Clientes</th>
-                  <th scope="col">Nicho</th>
-                </tr>
-              </thead>
-              <tbody>
-                {{#each viewData.equipe.consultores}}
-                <tr>
-                  <th scope="row">{{ this.idConsultor}} </th>
-                  <td>{{this.nomePessoa}}</td>
-                  <td>{{this.nivel}}</td>
-                  <td>R$ {{ this.totalVendido}} </td>
-                  <td>R$ {{ this.totalInvestido}} </td>
-                  <td>R$ {{ this.totalLucro}} </td>
-                  <td>{{ this.qtdCliente}} </td>
-                  <td>{{ this.nicho}} </td>
-                </tr>
-                {{/each}}
-              </tbody>
-          </table>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Nível</h5>
+                <p class="card-text">{{ viewData.equipe.nivel }}</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Investimento Total</h5>
+                <p class="card-text">R$ {{ viewData.equipe.totalInvestido }}</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Lucro Total</h5>
+                <p class="card-text">R$ {{ viewData.equipe.totalLucro }}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div>
+          <div class="table-responsive">
+            <div>
+              <h2 class="text-dark">Consultores</h2>
+              <p class="text-secondary">Ordenados por total vendido</p>
+            </div>
+            <table class="table shadow-sm bg-body-tertiary">
+                <thead class="table-light">
+                  <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Consultor</th>
+                    <th scope="col">Nivel</th>
+                    <th scope="col">Total Vendido</th>
+                    <th scope="col">Total Investido</th>
+                    <th scope="col">Total Lucro</th>
+                    <th scope="col">Qtd. Clientes</th>
+                    <th scope="col">Nicho</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {{#each viewData.equipe.consultores}}
+                  <tr>
+                    <th scope="row">{{ this.idConsultor}} </th>
+                    <td>{{this.nomePessoa}}</td>
+                    <td>{{this.nivel}}</td>
+                    <td>R$ {{ this.totalVendido}} </td>
+                    <td>R$ {{ this.totalInvestido}} </td>
+                    <td>R$ {{ this.totalLucro}} </td>
+                    <td>{{ this.qtdCliente}} </td>
+                    <td>{{ this.nicho}} </td>
+                  </tr>
+                  {{/each}}
+                </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
-  </div>
- </section>
+  </section>
+  </main>
 {{else}}
   <p>Voce ainda nao foi aceito em uma equipe</p>
 {{/if}}
